<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">commande-GoDo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_todo">New</string>
    <string name="select_todos">Select</string>
    <string name="save_todo">Save</string>
    <string name="cancel">Cancel</string>
    <string name="new_todo_hint">Enter a title for your new todo...</string>
    <string name="email_todos">Email</string>
    <string name="archive_todos">Archive</string>
    <string name="unarchive_todos">Unarchive</string>
    <string name="delete_todos">Delete</string>
    <string name="cancel_select">Cancel</string>
    <string name="select_all">All</string>
    <string name="action_displayactive">Inbox</string>
    <string name="action_displayarchived">Archive</string>
    <string name="email_all">Email All Todos...</string>
    <string name="summary">Summary</string>

</resources>