<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ca.ualberta.commande.android.commande_godo.MainActivity" >
    <item
        android:id="@+id/action_displayactive"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_displayactive"/>
    <item
        android:id="@+id/action_displayarchived"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_displayarchived"/>
    <item
        android:id="@+id/action_emailall"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/email_all"/>
    <item
        android:id="@+id/action_summary"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/summary"/>

    
</menu>
