<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_background" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/new_todo_hint"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>
    
    <RelativeLayout
        android:id="@+id/bottom_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/bottom_action_bar_color" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:text="@string/save_todo"
            android:textColor="#FFFFFF"
            android:clickable="true"
            android:onClick="saveNewTodo" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="#FFFFFF"
            android:clickable="true"
            android:onClick="cancelNewTodo" />
        
        
    </RelativeLayout>

</RelativeLayout>
